# box-box-box

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_initial_tables.py  002_update_summary_embedding_to_2048.py  003_add_summary_type.py  004_add_meeting_key.py
scripts/: init-db.sh  pre-commit  snapshot_session.py  start.sh
src/boxboxbox/: __main__.py  config.py  db.py  evals.py  main.py  models.py  observability.py
src/boxboxbox/audio/: elevenlabs.py  sarvam.py  tts.py
src/boxboxbox/delivery/: app.py  ws.py
src/boxboxbox/delivery/routers/: replay.py  sessions.py  standings.py  summaries.py
src/boxboxbox/delivery/templates/: base.html
src/boxboxbox/ingestion/: client.py  endpoints.py  poller.py  schemas.py
src/boxboxbox/summariser/: agent.py  context.py  digest.py  embeddings.py  loop.py  prompt.py  web_search.py
src/boxboxbox/summariser/templates/: digest_prompt.xml.jinja2  practice_digest.xml.jinja2  practice_summary.xml.jinja2  qualifying_digest.xml.jinja2  qualifying_summary.xml.jinja2  (+7 more)
tests/: conftest.py  test_audio.py  test_client.py  test_context.py  test_delivery_routes.py  test_digest.py  test_on_summary_callback.py  test_poller.py  test_prompt.py  test_schemas.py  test_summariser.py  test_web_search.py  test_ws.py
tests/fixtures/ci/: drivers.json  intervals.json  laps.json  overtakes.json  pit.json  position.json  race_control.json  session_result.json  sessions.json  starting_grid.json  stints.json  weather.json
(+2 files in other folders)
