[project]
name = "box-box-box"
version = "0.1.0"
description = "F1 Live Race Summariser — follow any race without watching it"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiolimiter>=1.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "pydantic-ai>=0.1",
    "jinja2>=3.1",
    "greenlet>=3.0",
]

[project.optional-dependencies]
audio = [
    "groq>=0.5",
    "deepgram-sdk>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boxboxbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ty.environment]
python-version = "3.12"
